# bank

./: Makefile  README.md  pyproject.toml
bank/: __init__.py  server.py
bank/config/: config.py  default.py
bank/db/: alembic.ini
bank/db/migrations/: env.py
bank/db/migrations/versions/: 19a5aa646ced_.py  713e7d306658_.py  9530e35ee133_.py
bank/db/models/: __init__.py  bill.py  product.py  transaction.py  user.py
bank/endpoints/: __init__.py  admin.py  bill.py  product.py  user.py
bank/middleware/: auth.py
bank/schemas/auth/: authentication.py  registration.py
bank/schemas/bill/: bill.py
bank/schemas/product/: buy_product.py  products.py
bank/utils/biil/: bill.py  database.py
bank/utils/products/: database.py  products.py
bank/utils/user/: database.py  user.py
